# takeoverbench

./: .gitignore  LICENSE  README.md  hello.py  package.json  pnpm-lock.yaml  svelte.config.js  template.env  vite.config.ts
benchmarks/: README.md  evaluations.yaml  fit_benchmarks.py  models.yaml  patch_benchmark_data.py  pyproject.toml
benchmarks/ChemBench_mirza_2024/: README.md  download_data.py  process_data.py
benchmarks/ChemBench_mirza_2024/data/: chembench_leaderboard.json
benchmarks/CyBench_zhang_2024/: README.md  download_data.py  process_data.py
benchmarks/CyBench_zhang_2024/data/: cybench.csv
benchmarks/ForecastBench_karger_2024/: README.md  download_data.py  process_data.py
benchmarks/ForecastBench_karger_2024/data/: leaderboard_tournament.csv
benchmarks/LongTasks_kwa_2025/: README.md  download_data.py  process_data.py
benchmarks/MLE-Bench_chan_2024/: README.md  download_data.py  process_data.py
benchmarks/MLE-Bench_chan_2024/data/: mle_bench_leaderboard.csv
benchmarks/MakeMeSay_openai_2024/: README.md  reproduce.py
benchmarks/RepliBench_black_2025/: README.md
benchmarks/RepliBench_black_2025/data/: plot_data.csv  repli_plot.py
benchmarks/SAD_laine_2025/: README.md  download_data.py  export_data.py  process_logs.py  run_config.yaml  run_sad_experiments.py
benchmarks/SAD_laine_2025/data/: inspect_sad_mini.csv  sad.csv
benchmarks/SAD_laine_2025/results/: benchmark.json  models.json
benchmarks/VCT_goetting_2025/: README.md
benchmarks/VCT_goetting_2025/data/: vct.csv
benchmarks/src/: models.py
data/: README.md  benchmarks.json  (+6 more)
(+65 files in other folders)
