[project]
name = "takeoverbench_benchmarks"
version = "0.1.0"
description = "Benchmark data for TakeOverBench"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inspect-evals[makemesay]",
    "numpy>=2.4.1",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.17.0",
]
